--- a/app/src/sass/main.sass
+++ b/app/src/sass/main.sass
@@ -1,2 +1,46 @@
-@import './styles.sass'
-@import './customize.sass'
+@import "./custom"
+@import "~bootstrap/scss/bootstrap"
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss"
+@import '~@fortawesome/fontawesome-free/scss/solid'
+@import '~@fortawesome/fontawesome-free/scss/regular'
+@import '~@fortawesome/fontawesome-free/scss/brands'
+
+/* Sticky footer styles */
+html 
+  position: relative
+  min-height: 100%
+
+body 
+  margin-bottom: 76px // Margin bottom by footer height
+
+footer 
+  position: absolute
+  bottom: 0
+  width: 100%
+  height: 46px
+  line-height: 46px
+  background-color: #f5f5f5
+/* ------------------------------------------------- */
+
+.btn 
+  width: 150px
+
+#alerts 
+  z-index: 1
+  position: fixed
+  right: 15px
+  margin-top: 10px
+  width: 250px
+
+i 
+  cursor: pointer
+
+i:not(:last-child)
+  opacity: 0
+  transition: .4s ease all
+
+tr:hover i:not(:last-child)
+  opacity: 1
+  margin-right: 13px
+  transition: .4s ease all
+
