--- a/app/src/sass/main.sass
+++ b/app/src/sass/main.sass
@@ -22,7 +22,7 @@ footer
   background-color: #f5f5f5
 /* ------------------------------------------------- */
 
-.btn 
+#btnStart, #btnStop
   width: 150px
 
 #alerts 
