Add Settings UI block
Add HTML, CSS, bootstrap modal and tab modules, jquery, popper

--- a/app/src/sass/main.sass
+++ b/app/src/sass/main.sass
@@ -44,3 +44,8 @@ tr:hover i:not(:last-child)
   margin-right: 13px
   transition: .4s ease all
 
+.settings
+  position: absolute
+
+.settings i
+  font-size: 20px
