--- a/app/src/sass/_custom.sass
+++ b/app/src/sass/_custom.sass
@@ -12,3 +12,14 @@ $theme-colors: ("primary": #262626, "secondary": #141414, "success": #28a745, "d
 
 .alert-info 
   background-color: #94b3d1    !important
+
+.nav-tabs .nav-link
+  background-color: #262626 !important
+
+.nav-tabs .nav-link, .nav-tabs .nav-link:hover, .nav-tabs .nav-link.active
+  border-bottom: (none !important)
+  border-color: (#141414 !important)
+  color: (#f8f9fa !important)
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link.active
+  background-color: #141414 !important
