font-awesome scss load fix

--- a/app/src/sass/main.sass
+++ b/app/src/sass/main.sass
@@ -1,9 +1,10 @@
 @import "./custom"
-@import "~bootstrap/scss/bootstrap"
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss"
-@import '~@fortawesome/fontawesome-free/scss/solid'
-@import '~@fortawesome/fontawesome-free/scss/regular'
-@import '~@fortawesome/fontawesome-free/scss/brands'
+@import "./node_modules/bootstrap/scss/bootstrap"
+
+@import "../scss/fontawesome.scss"
+@import "../scss/solid"
+@import "../scss/regular"
+@import "../scss/brands"
 
 /* Sticky footer styles */
 html 
